# paintbynumbersgenerator

./: .gitignore  EXPLORATION_GUIDE.md  MANAGER_VALIDATION_PROTOCOL.md  PROJECT_COMPLETE_SETUP.md  PROJECT_README.md  PROJECT_TRACKER.md  PROMPTS.md  PYTHON_CLI_EXAMPLES.md  PYTHON_MIGRATION_WBS.md  README.md  REFACTORING_PROGRESS_REPORT.md  SESSION_3_PROGRESS.md  SUMMARY.md  example_exploration_config.json  example_settings.json  index.html  jest.config.js  package-lock.json  package.json  paint-by-numbers-cli  test_performance.py
python-paintbynumbers/: .gitignore  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE4_COMPLETE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
python-paintbynumbers/examples/: basic_usage.py
python-paintbynumbers/src/paintbynumbers/: __init__.py  py.typed
python-paintbynumbers/src/paintbynumbers/algorithms/: __init__.py  kmeans.py  vector.py
python-paintbynumbers/src/paintbynumbers/cli/: __init__.py
python-paintbynumbers/src/paintbynumbers/core/: __init__.py  common.py  pipeline.py  settings.py  types.py
python-paintbynumbers/src/paintbynumbers/output/: __init__.py  rasterexport.py  svgbuilder.py
python-paintbynumbers/src/paintbynumbers/processing/: __init__.py  colorreduction.py  facetbordersegmenter.py  facetbordertracer.py  facetbuilder.py  facetlabelplacer.py  (+2 more)
python-paintbynumbers/tests/: __init__.py  conftest.py
python-paintbynumbers/tests/benchmarks/: __init__.py  test_performance.py
python-paintbynumbers/tests/comparison/: __init__.py
python-paintbynumbers/tests/unit/: test_boundingbox.py  test_cli.py  test_color.py  test_common.py  test_edge_cases.py  test_facetbordersegmenter.py  test_facetbordertracer.py  test_imageio.py  test_phase6.py  test_point.py  test_settings.py  test_typed_arrays.py  test_types.py
(+55 files in other folders)
