[metadata]
name = paintbynumbers
version = attr: paintbynumbers.__version__
description = Paint by Numbers Generator - Convert images to paint-by-numbers with numbered regions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nuopel/paintbynumbersgenerator
author = Paint by Numbers Generator Contributors
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11
install_requires =
    numpy>=1.24.0,<2.0.0
    Pillow>=10.0.0,<11.0.0
    scikit-learn>=1.3.0,<2.0.0
    svgwrite>=1.4.0,<2.0.0
    click>=8.1.0,<9.0.0
    cairosvg>=2.7.0,<3.0.0
    tqdm>=4.65.0,<5.0.0

[options.packages.find]
where = src

[options.package_data]
paintbynumbers = py.typed

[options.entry_points]
console_scripts =
    paint-by-numbers = paintbynumbers.cli.main:cli

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-benchmark>=4.0.0
    mypy>=1.5.0
    ruff>=0.1.0
    types-Pillow
    types-tqdm

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv,
    .mypy_cache,
    .pytest_cache,
    .coverage
